# neuro_mcp_v2

./: .gitignore  README.md  main.py  pyproject.toml
src/mymcp/: server.py
src/mymcp/tools/: emotion.py  extractor.py  fs_io.py  memory.py  summarize.py  websrch.py
src/mymcp/utils/: security.py
