[project]
name = "second-mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "chromadb>=1.5.9",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "torch>=2.12.0",
    "transformers>=5.12.0",
]
